--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "inquirer": "^6.3.1"
+  },
+  "devDependencies": {
+    "jsdoc-to-markdown": "^7.0.1"
   }
 }
